# summafy

./: .coverage  README.md  pyproject.toml
src/summafy/: core.py  main.py  schemas.py
tests/: test_core.py  test_main.py
